src/passes/snapshots/lumina2__passes__ast_gen__test__annotation_key.snap
---
source: src/passes/ast_gen.rs
expression: "@some_annotation"
---
Annotation {
    key: StringId(
        0,
    ),
    value: None,
}
