src/passes/snapshots/lumina2__passes__ast_gen__test__annotation_key_value.snap
---
source: src/passes/ast_gen.rs
expression: "@some_annotation(value)"
---
Annotation {
    key: StringId(
        0,
    ),
    value: Some(
        StringId(
            1,
        ),
    ),
}
