src/passes/snapshots/lumina2__passes__ast_gen__test__assign_simple.snap
---
source: src/passes/ast_gen.rs
expression: a = 1 + 2
---
Assign(
    Assign {
        variable: ExprId(
            0,
        ),
        value: ExprId(
            3,
        ),
    },
)
