src/passes/snapshots/lumina2__passes__ast_gen__test__binary_arithmetic.snap
---
source: src/passes/ast_gen.rs
expression: 1 + 2
---
Binary(
    Binary {
        lhs: ExpressionId(
            0,
        ),
        operation: Plus(
            Plus,
        ),
        rhs: ExpressionId(
            1,
        ),
    },
)
