src/passes/snapshots/lumina2__passes__ast_gen__test__binary_binary.snap
---
source: src/passes/ast_gen.rs
expression: 5 & 2
---
Binary(
    Binary {
        lhs: ExprId(
            0,
        ),
        op: BinaryAnd(
            Amp,
        ),
        rhs: ExprId(
            1,
        ),
    },
)
