src/passes/snapshots/lumina2__passes__ast_gen__test__binary_logical.snap
---
source: src/passes/ast_gen.rs
expression: true && false
---
Binary(
    Binary {
        lhs: ExpressionId(
            0,
        ),
        operation: LogicalAnd,
        rhs: ExpressionId(
            1,
        ),
    },
)
