src/passes/snapshots/lumina2__passes__ast_gen__test__call_args.snap
---
source: src/passes/ast_gen.rs
expression: "some_ident(1, something, true)"
---
Call(
    Call {
        callee: ExprId(
            0,
        ),
        arguments: [
            ExprId(
                1,
            ),
            ExprId(
                2,
            ),
            ExprId(
                3,
            ),
        ],
    },
)
