src/passes/snapshots/lumina2__passes__ast_gen__test__call_arguments.snap
---
source: src/passes/ast_gen.rs
expression: "some_ident(1, something, true)"
---
Call(
    Call {
        callee: ExpressionId(
            0,
        ),
        arguments: [
            ExpressionId(
                1,
            ),
            ExpressionId(
                2,
            ),
            ExpressionId(
                3,
            ),
        ],
    },
)
