src/passes/snapshots/lumina2__passes__ast_gen__test__call_simple.snap
---
source: src/passes/ast_gen.rs
expression: some_ident()
---
Call(
    Call {
        callee: ExpressionId(
            0,
        ),
        arguments: [],
    },
)
