src/passes/snapshots/lumina2__passes__ast_gen__test__expression_statement.snap
---
source: src/passes/ast_gen.rs
expression: "{ 1 }"
---
Block {
    id: AstId(
        1,
    ),
    statements: [],
    expression: Some(
        ExpressionId(
            0,
        ),
    ),
}
