src/passes/snapshots/lumina2__passes__ast_gen__test__expression_statement_semicolon.snap
---
source: src/passes/ast_gen.rs
expression: "{ 1; }"
---
Block {
    id: AstId(
        2,
    ),
    statements: [
        StatementId(
            0,
        ),
    ],
    expression: None,
}
