src/passes/snapshots/lumina2__passes__ast_gen__test__external_function_full.snap
---
source: src/passes/ast_gen.rs
expression: "extern fn some_function(parameter: u8) -> bool;"
---
FunctionDeclaration {
    signature: FunctionSignature {
        name: StringId(
            0,
        ),
        parameters: [
            FunctionParameter {
                name: StringId(
                    1,
                ),
                ty: AstTypeId(
                    0,
                ),
            },
        ],
        return_ty: Some(
            AstTypeId(
                1,
            ),
        ),
    },
    implementation: None,
}
